src/test/deca/syntax/valid/without_class/empty_main.deca
// Description :
//    test syntax empty main
//
// Resultats :
//    ok
//
// Historique:
//    cree le 06/01/2023

{}